--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,6 +2,8 @@ $body_font: 'Inter', sans-serif;
 $heading_font: 'Futura', sans-serif;
 
 $white: #FFFFFF;
+$black: #505050;
+$grey: #F2F2F2;
 $green: #00A558;
 $green_dark: #004826;
 $yellow: #F2C017;
