--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,6 +5,7 @@ $white: #FFFFFF;
 $black: #505050;
 $grey: #F2F2F2;
 $green: #00A558;
+$greenish: #008044;
 $green_dark: #004826;
 $yellow: #F2C017;
 
