--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,6 +7,7 @@ $grey: #F2F2F2;
 $green: #00A558;
 $greenish: #008044;
 $green_dark: #004826;
+$green_darkish: #006335;
 $yellow: #F2C017;
 
 $base: 20px;
