--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -100,7 +100,7 @@ h4,
 h5,
 .h5 {
 	font-size: $base * $scale;
-	font-weight: 500;
+	font-weight: 700;
 
 	@media (max-width: $mobile) {
     font-size: $mobile_base * $mobile_scale * 1;
@@ -208,7 +208,8 @@ textarea {
 	border: 1px solid;
 
 	&:focus {
-		outline: 1px solid $yellow;
+		// outline: 1px solid $yellow;
+		outline: none;
 		outline-offset: 0px;
 	}
 
