--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -362,6 +362,10 @@ details {
 		align-items: center;
 	}
 
+	&.flex--nowrap {
+		flex-wrap: nowrap;
+	}
+
   &.flex--gapped {
     --gap: #{$base};
 
